--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_API_URL = 
+REACT_APP_API_URL = http://localhost:3001/
 REACT_APP_NAME = VUTAPESA
 REACT_APP_MPESA_PAYBILL = 646999
 REACT_APP_MPESA_NAME = MBOLESHA WOTE VENTURES
